--- a/style.css
+++ b/style.css
@@ -2118,6 +2118,14 @@ color: #009abf;
     line-height: 34px;
 }
 
+.fancyButton a{
+    padding: 10px;
+    width: 90%;
+    margin: 0 auto;
+    font-size: 14px;
+}
+
+
 }
 
 
