--- a/style.css
+++ b/style.css
@@ -1690,6 +1690,8 @@ h3.featured-tlds{
 
 .staff-title h2{
     padding-left: 14px;
+    margin-bottom: 20px;
+
 }
 
 
@@ -2314,12 +2316,14 @@ padding-bottom: 100px;
     color: #009abf;
 }
 
-
 .team{
     border-bottom: 10px solid #009BBF;
     padding-top: 50px;
 }
 
+.aqua-border-top{
+    border-top: 10px solid #009BBF;
+}
 
 
 @media screen and (max-width: 768px){
