--- a/style.css
+++ b/style.css
@@ -582,7 +582,7 @@ header#siteHeader h1 {
 }
 
 footer{
-    border-top: 10px solid #009abf;
+    /*border-top: 10px solid #009abf;*/
     background: #222;
     color: #dedede;
     font-family: 'Open Sans';
