--- a/style.css
+++ b/style.css
@@ -2325,6 +2325,13 @@ padding-bottom: 100px;
     border-top: 10px solid #009BBF;
 }
 
+.iframe-area{
+    height: 400px;
+    overflow: scroll;
+    padding: 0;
+    position: relative;
+}
+
 
 @media screen and (max-width: 768px){
 
