--- a/style.css
+++ b/style.css
@@ -2348,6 +2348,7 @@ p.fancyButton a:link, p.fancyButton a:visited {
 
 }
 
+.bottom-border-aqua,
 .feature-info-carousel,
 #pageHeader{
     border-bottom: 10px solid #009BBF;
