--- a/style.css
+++ b/style.css
@@ -2406,3 +2406,60 @@ margin-top: 13px;
     padding-right: 5px;
 }
 
+
+@media screen and (max-width: 768px){
+    .desktop-header-image{
+        display: none;
+    }
+
+#pageHeader {
+    height: 240px;
+}
+
+
+#pageHeaderContent {
+    top: 40px;
+}
+
+#pageHeaderContent h1 {
+    font-size: 36px;
+}
+
+
+.accordion h3{
+    padding-top: 4px;
+}
+
+.accordion h3 i {
+    font-size: 12px;
+    margin-right: 10px;
+}
+
+.accordion h3 {
+    padding: 10px;
+}
+
+.accordion h3 span {
+    font-size: 14px;
+}
+
+
+.accordion p{
+    font-size: 14px;
+}
+
+}
+
+
+
+@media screen and (max-width: 640px){
+
+.featured-tlds img.solutions {
+
+    margin: 20px auto;
+    width: 80%;
+    height: auto;
+}
+
+}
+
