--- a/style.css
+++ b/style.css
@@ -2416,6 +2416,17 @@ margin-top: 13px;
 }
 
 
+
+.customer-list .col-sm-3{
+    padding-top: 5px;
+    padding-bottom: 5px;
+    height: 30px;
+}
+
+
+
+
+
 @media screen and (max-width: 768px){
     .desktop-header-image{
         display: none;
