--- a/style.css
+++ b/style.css
@@ -2417,7 +2417,7 @@ margin-top: 13px;
 
 
 
-.customer-list .col-sm-3{
+.customer-list .col-sm-3 .row{
     padding-top: 5px;
     padding-bottom: 5px;
     height: 30px;
