--- a/style.css
+++ b/style.css
@@ -492,6 +492,12 @@ li.menu-item a{
     color: #fff;
     font-size: 18px;
     font-family: 'open_sans_condensed_bold';
+
+}
+
+.col-md-2.col-sm-3.col-xs-6 > h4 > a,
+#primary-menu li.menu-item a{
+pointer-events: none;
 }
 
 li.menu-item:hover{
