--- a/style.css
+++ b/style.css
@@ -421,8 +421,8 @@ a img.aligncenter {
 
 /*my styles*/
 
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i');
-@import url('https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,300i,700');
+/*@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i');*/
+/*@import url('https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,300i,700');*/
 
 body{
     font-family: 'Open Sans', sans-serif !important;
