--- a/style.css
+++ b/style.css
@@ -447,7 +447,6 @@ h2{
 nav{
     position: fixed;
     width: 100%;
-    background: rgba(0,0,0,.5);
     border-bottom: 1px solid #fff;
     height: 82px;
 }
@@ -515,9 +514,9 @@ li.menu-item:hover a{
         /*opacity: .27;*/
         z-index: 1000;
 
-transition: background-color .25s ease-in-out;
-  -moz-transition: background-color .25s ease-in-out;
-  -webkit-transition: background-color .25s ease-in-out;
+transition: background-color .15s ease-in-out;
+  -moz-transition: background-color .15s ease-in-out;
+  -webkit-transition: background-color .15s ease-in-out;
 
 
 }
@@ -552,7 +551,7 @@ main #pageHeader #pageHeaderContent {
 }
 
 header#siteHeader {
-    background: rgba(0, 0, 0, 0.27);
+    /*background: rgba(0, 0, 0, 0.27);*/
     border-top: 10px solid #009abf;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
